[www] Fix layout issues on confirmation dialogs

--- a/node/www/css/style.less
+++ b/node/www/css/style.less
@@ -466,13 +466,12 @@ body
 .modal_confirm .alert
 {
     margin-bottom: 0;
+    padding-right: 14px;
 }
 
 .modal_confirm .buttons
 {
-    position:   absolute;
-    bottom:     @button_margin;
-    right:      @button_margin;
+    text-align: right;
 }
 
 #tab_plugins .control-group:last-child
